Fix letter spacing on h2 members

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -140,7 +140,7 @@ h1 {
 .members {
 
   h2 {
-    letter-spacing: 1px;
+    letter-spacing: 2px;
   }
 
   p {
